<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="@dimen/activity_margin"
    tools:context=".EditorActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <!-- Label -->
        <TextView
            style="@style/CategoryStyle"
            android:text="@string/category_name" />

        <LinearLayout
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:layout_weight="2.2"
            android:paddingLeft="4dp"
            android:orientation="vertical"
            android:gravity="center">

            <ImageView
                android:id="@+id/product_image"
                android:layout_width="@dimen/list_item_layout_width_image"
                android:layout_height="@dimen/list_item_layout_width_image"
                android:padding="@dimen/editor_image_padding" />


            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center">

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="loadImage"
                    android:background="@color/colorPrimary"
                    android:textColor="@android:color/white"
                    android:text="@string/button_add_image" />
            </RelativeLayout>
            <!-- Product Name field -->
            <EditText
                android:id="@+id/edit_product_name"
                style="@style/EditorFieldStyle"
                android:hint="@string/hint_product_name"
                android:inputType="textCapWords" />
            </LinearLayout>
    </LinearLayout>

    <!-- Product Price category -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <!-- Label -->
        <TextView
            style="@style/CategoryStyle"
            android:text="@string/category_price" />

        <!-- Input field -->
        <RelativeLayout
            android:layout_width="@dimen/editor_layout_width"
            android:layout_height="wrap_content"
            android:layout_weight="2">

            <!-- Product Price field -->
            <EditText
                android:id="@+id/edit_price"
                style="@style/EditorFieldStyle"
                android:hint="@string/hint_price"
                android:inputType="numberDecimal" />
        </RelativeLayout>
    </LinearLayout>

    <!-- Quantity category -->
    <LinearLayout
        android:id="@+id/container_quantity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <!-- Label -->
        <TextView
            style="@style/CategoryStyle"
            android:text="@string/category_quantity" />

        <!-- Input fields -->
        <RelativeLayout
            android:layout_width="@dimen/editor_layout_width"
            android:layout_height="wrap_content"
            android:layout_weight="0.75">

            <!-- Quantity field -->
            <EditText
                android:id="@+id/edit_quantity"
                style="@style/EditorFieldStyle"
                android:hint="@string/hint_quantity"
                android:inputType="number" />

        </RelativeLayout>
        <Button
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/editor_button_margin"
            android:onClick="removeButton"
            android:background="@color/colorPrimary"
            android:textColor="@android:color/white"
            android:text="@string/button_remove" />

        <Button
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/editor_button_margin"
            android:onClick="receiveButton"
            android:background="@color/colorPrimary"
            android:textColor="@android:color/white"
            android:text="@string/button_receive" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">


    </LinearLayout>

    <!-- Quantity Sold category -->
    <LinearLayout
        android:id="@+id/container_sold"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <!-- Label -->
        <TextView
            style="@style/CategoryStyle"
            android:text="@string/category_sold" />

        <!-- Input fields -->
        <RelativeLayout
            android:layout_width="@dimen/editor_layout_width"
            android:layout_height="wrap_content"
            android:layout_weight="2">

            <!-- Quantity Sold field -->
            <EditText
                android:id="@+id/edit_sold"
                style="@style/EditorFieldStyle"
                android:hint="@string/hint_sold"
                android:inputType="number" />
        </RelativeLayout>
    </LinearLayout>



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/editor_button_margin"
            android:onClick="soldButton"
            android:background="@color/colorPrimary"
            android:textColor="@android:color/white"
            android:text="@string/sold" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/editor_button_margin"
            android:onClick="orderButton"
            android:background="@color/colorPrimary"
            android:textColor="@android:color/white"
            android:drawableEnd="@drawable/ic_send_white_24dp"
            android:text="@string/place_order" />
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/editor_button_margin"
            android:onClick="deleteButton"
            android:background="@color/colorPrimary"
            android:textColor="@android:color/white"
            android:drawableEnd="@drawable/ic_delete_white_24dp"
            android:text="@string/delete" />
    </LinearLayout>


</LinearLayout>
</ScrollView>