<?xml version="1.0" encoding="utf-8"?><!-- Layout for a single list item in the list of inventory -->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:gravity="center"
    android:layout_gravity="top"
    android:padding="@dimen/activity_margin">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:focusable="false"
        android:gravity="center">

        <ImageView
            android:id="@+id/item_image"
            android:layout_width="72dp"
            android:layout_height="72dp"
            android:scaleType="centerCrop" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="6dp"
            android:orientation="vertical"
            android:layout_gravity="center_vertical">

            <TextView
                android:id="@+id/name"
                android:layout_width="@dimen/list_item_layout_width_name"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-medium"
                android:textAppearance="?android:textAppearanceSmall"
                android:textColor="#2B3D4D" />

            <LinearLayout
                android:layout_width="@dimen/list_item_layout_width_name"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif"
                    android:text="@string/listview_current_qty"
                    android:textAppearance="?android:textAppearanceSmall"
                    android:textColor="#2B3D4D" />

                <TextView
                    android:id="@+id/quantity_current"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif"
                    android:textAppearance="?android:textAppearanceSmall"
                    android:textColor="#2B3D4D" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="6dp"
            android:orientation="vertical"
            android:layout_gravity="center_vertical">

            <TextView
                android:id="@+id/price"
                android:layout_width="@dimen/list_item_layout_width_price"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-medium"
                android:textAppearance="?android:textAppearanceSmall"
                android:textColor="#2B3D4D" />

            <LinearLayout
                android:layout_width="@dimen/list_item_layout_width_price"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif"
                    android:text="@string/listview_sold"
                    android:textAppearance="?android:textAppearanceSmall"
                    android:textColor="#2B3D4D" />

                <TextView
                    android:id="@+id/quantity_sold"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif"
                    android:textAppearance="?android:textAppearanceSmall"
                    android:textColor="#2B3D4D" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
    <Button
        android:id="@+id/listViewSold"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:textColor="@android:color/white"
        android:layout_marginTop="16dp"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:focusable="false"
        android:textAppearance="?android:textAppearanceSmall"
        android:text="@string/sold"/>
</LinearLayout>